@@ -1,3 +1,14 @@
+2006-11-29  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
+
+	* tag V00-02-10
+	* remove debug() method
+	* remove check_event_data() method
+	* fix stopTimer()/initTimer()
+	* add BU::reset() to set all counters and non-counters to their
+	'configured' state
+	* verify that "configure - enable - halt - configure - enable"
+	sequence is functional
+
 2006-11-28  Philipp SCHIEFERDECKER  <philipp.schieferdecker@cern.ch>
 
 	* tag V00-02-09
